--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "homepage": "https://old-world-builder.com",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.2",
+    "@capacitor/android": "^5.6.0",
+    "@capacitor/core": "^5.6.0",
+    "@capacitor/ios": "^5.6.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "@sentry/cli": "^2.25.0",
     "@sentry/react": "^7.93.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -15,13 +18,13 @@
     "classnames": "^2.3.1",
     "gh-pages": "^3.2.3",
     "prettier": "^2.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-intl": "^6.3.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^1.0.1",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -38,7 +41,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && yarn sentry:sourcemaps",
+    "build": "react-scripts build && npm run sentry:sourcemaps",
+    "test-build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -62,5 +66,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@capacitor/cli": "^5.6.0"
   }
 }
